--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "plotly.js": "^2.12.1",
+    "plotly.js-basic-dist": "^2.12.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-plotly.js": "^2.5.1",
     "react-scripts": "5.0.1",
+    "source-map-explorer": "^2.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
